--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,5 @@
 .app{
+  background-color: aliceblue;
   display:flex;
   justify-content: center;
   align-items: center;
@@ -6,14 +7,18 @@
   height:100vh;
   flex-direction: column;
 }
-.app .box{
+.box{
   display: flex;
-  justify-content: space-between;
+  flex-direction: row-reverse;
+  justify-content: center;
+  gap: 12px;
   align-items: center;
   padding:10px;
-  width: 300px;
-  height: 100px;
-  border: 1px solid black;
+  min-width: 300px;
+  min-height: 100px;
+  background-color: #f5f5f5;
+  border-radius: 12px;
+  box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
 }
   
 
